--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,7 @@
 tasks:
   - before: nvm install 16
     init: npm install;
-    command: npm run start;
+    command: run start;
 # Ports to expose on workspace startup (optional)
 ports:
   - port: 3000
